--- a/src/app/modules/admin/income/components/add-income/add-income.component.html
+++ b/src/app/modules/admin/income/components/add-income/add-income.component.html
@@ -49,8 +49,9 @@
                 <label class="font-medium" for="description">
                     Description</label>
 
-                <input id="description" type="text" formControlName="description" placeholder="Enter Description"
-                    class="border border-myAccent p-2 rounded" />
+                <input onkeypress="return String.fromCharCode(event.charCode).match(/[^a-zA-Z0-9\., ]/g) === null"
+                    maxlength="70" id="description" type="text" formControlName="description"
+                    placeholder="Enter Description" class="border border-myAccent p-2 rounded" />
             </div>
 
             <div class="flex flex-col gap-2 w-full">
@@ -131,7 +132,8 @@
                     <label for="tax-type" class="font-medium">Date <span class="text-red-600">*</span></label>
 
                     <mat-form-field>
-                        <input class="date" formControlName="actualDate" matInput [matDatepicker]="picker"
+                        <input onkeypress="return String.fromCharCode(event.charCode).match(/[^0-9/]/g) === null"
+                            class="date" formControlName="actualDate" matInput [matDatepicker]="picker"
                             placeholder="Choose date">
                         <mat-datepicker-toggle class="text-myAccent w-7" matIconSuffix
                             [for]="picker"></mat-datepicker-toggle>
