--- a/src/app/modules/admin/accounts/components/manage-account/manage-account.component.html
+++ b/src/app/modules/admin/accounts/components/manage-account/manage-account.component.html
@@ -66,7 +66,8 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
     <div class="flex w-full flex-col md:flex-row gap-4 justify-center items-center">
         <!-- Search -->
         <div class="border border-myAccent w-full flex items-center justify-between rounded pr-2">
-            <input type="search" name="account-search" id="account-search" (keyup)="searchAccount($event)"
+            <input onkeypress="return String.fromCharCode(event.charCode).match(/[^a-zA-Z0-9\., ]/g) === null"
+                type="search" name="account-search" id="account-search" (keyup)="searchAccount($event)"
                 placeholder="Search " class="px-4 py-2 rounded w-full caret-myAccent" />
 
             <mat-icon class="text-myAccent w-[24px] h-[24px] cursor-pointer search-icon"
@@ -74,10 +75,10 @@ l-40 0 0 60 0 60 40 0 c33 0 40 3 40 20 0 17 -7 20 -40 20 l-40 0 0 50 0 50
         </div>
         <mat-form-field appearance="fill" class="mt-0 w-full">
             <mat-date-range-input [rangePicker]="picker" placeholder="Select Date">
-                <input matStartDate placeholder="Start date" [(ngModel)]="getAccountModal.startDate"
-                    (dateChange)="dateFilter()" />
-                <input matEndDate placeholder="End date" (dateChange)="dateFilter()"
-                    [(ngModel)]="getAccountModal.endDate" />
+                <input onkeypress="return String.fromCharCode(event.charCode).match(/[^0-9/]/g) === null" matStartDate
+                    placeholder="Start date" [(ngModel)]="getAccountModal.startDate" (dateChange)="dateFilter()" />
+                <input onkeypress="return String.fromCharCode(event.charCode).match(/[^0-9/]/g) === null" matEndDate
+                    placeholder="End date" (dateChange)="dateFilter()" [(ngModel)]="getAccountModal.endDate" />
             </mat-date-range-input>
 
             <mat-icon matDatepickerToggleIcon class="cursor-pointer" (click)="clearDate()" *ngIf="
