--- a/src/app/modules/admin/accounts/components/profit-and-loss/profit-and-loss.component.html
+++ b/src/app/modules/admin/accounts/components/profit-and-loss/profit-and-loss.component.html
@@ -20,10 +20,10 @@
 
     <mat-form-field appearance="fill" class="mt-4 w-full sm:w-[25rem]">
         <mat-date-range-input [rangePicker]="picker" placeholder="Select Date">
-            <input matStartDate placeholder="Start date" [(ngModel)]="getProfitAndLossModal.startDate"
-                (dateChange)="dateFilter()" />
-            <input matEndDate placeholder="End date" [(ngModel)]="getProfitAndLossModal.endDate"
-                (dateChange)="dateFilter()" />
+            <input onkeypress="return String.fromCharCode(event.charCode).match(/[^0-9/]/g) === null" matStartDate
+                placeholder="Start date" [(ngModel)]="getProfitAndLossModal.startDate" (dateChange)="dateFilter()" />
+            <input onkeypress="return String.fromCharCode(event.charCode).match(/[^0-9/]/g) === null" matEndDate
+                placeholder="End date" [(ngModel)]="getProfitAndLossModal.endDate" (dateChange)="dateFilter()" />
         </mat-date-range-input>
 
         <mat-icon matDatepickerToggleIcon class="cursor-pointer" (click)="clearDate()" *ngIf="
@@ -82,12 +82,12 @@
         class="bg-[#FFB9B9] mx-auto mt-[3rem] rounded-[1rem] border border-[#F90000] flex flex-col-reverse gap-4 sm:flex-row items-center justify-between px-8 py-10 w-full lg:w-1/2 shadow-[4.0px_8.0px_8.0px_rgba(0,0,0,0.38)]">
         <div
             class="flex flex-col items-center justify-center rounded-full bg-[#F98E8E] shadow-[inset_-12px_-8px_40px_rgba(0,_0,_0,_0.24)] py-4 px-8 sm:py-6 sm:px-12">
-            <p class="font-bold text-lg">Profit</p>
+            <p class="font-bold text-lg">Loss</p>
             <p class="font-bold text-lg">
                 {{ profitAndLossData?.loss | currency : "INR" }}
             </p>
         </div>
 
-        <img src="../../../../../../assets/images/logo/profit.png" alt="Total Income" class="w-[70px] sm:w-[100px]" />
+        <img src="../../../../../../assets/images/logo/loss.png" alt="Total Income" class="w-[70px] sm:w-[100px]" />
     </div>
 </section>
