--- a/src/app/modules/admin/expense/components/expense-categories/expense-categories.component.html
+++ b/src/app/modules/admin/expense/components/expense-categories/expense-categories.component.html
@@ -18,7 +18,8 @@
     <div class="flex w-full flex-col md:flex-row gap-4 justify-center items-center">
         <!-- Search -->
         <div class="border border-myAccent w-full flex items-center justify-between rounded pr-2">
-            <input type="search" name="incomeCategory-search" id="incomeCategory-search" (keyup)="searchAccount($event)"
+            <input onkeypress="return String.fromCharCode(event.charCode).match(/[^a-zA-Z0-9\., ]/g) === null"
+                type="search" name="incomeCategory-search" id="incomeCategory-search" (keyup)="searchAccount($event)"
                 placeholder="Search Category" class="px-4 py-2 w-full rounded caret-myAccent" />
 
             <mat-icon class="text-myAccent w-[24px] h-[24px] cursor-pointer search-icon"
@@ -27,10 +28,10 @@
 
         <mat-form-field appearance="fill" class="mt-0 w-full">
             <mat-date-range-input [rangePicker]="picker" placeholder="Select Date">
-                <input matStartDate placeholder="Start date" [(ngModel)]="getCategoryModal.startDate"
-                    (dateChange)="dateFilter()" />
-                <input matEndDate placeholder="End date" [(ngModel)]="getCategoryModal.endDate"
-                    (dateChange)="dateFilter()" />
+                <input onkeypress="return String.fromCharCode(event.charCode).match(/[^0-9/]/g) === null" matStartDate
+                    placeholder="Start date" [(ngModel)]="getCategoryModal.startDate" (dateChange)="dateFilter()" />
+                <input onkeypress="return String.fromCharCode(event.charCode).match(/[^0-9/]/g) === null" matEndDate
+                    placeholder="End date" [(ngModel)]="getCategoryModal.endDate" (dateChange)="dateFilter()" />
             </mat-date-range-input>
 
             <mat-icon matDatepickerToggleIcon class="cursor-pointer" (click)="clearDate()" *ngIf="
@@ -76,13 +77,13 @@
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="actions">
+            <ng-container matColumnDef="actions" *ngIf="checkEdit">
                 <th class="text-right" mat-header-cell *matHeaderCellDef>
                     Actions
                 </th>
                 <td mat-cell *matCellDef="let element">
                     <div class="flex gap-2 justify-center sm:justify-end">
-                        <button *ngIf="checkEdit" matTooltip="Edit Category" (click)="editCategory(element)">
+                        <button matTooltip="Edit Category" (click)="editCategory(element)">
                             <img src="assets/icons/edit.svg" alt="Edit" class="w-[24px] h-[24px] cursor-pointer ml-5" />
                         </button>
                         <button *ngIf="checkDelete" (click)="openDeleteDialog(element.id)" matTooltip="Delete Category">
