--- a/src/app/modules/admin/income/components/income-categories-dialog/income-categories-dialog.component.html
+++ b/src/app/modules/admin/income/components/income-categories-dialog/income-categories-dialog.component.html
@@ -1,13 +1,15 @@
 <!-- Angular Material Dialog -->
-<h2 mat-dialog-title class="mb-2">Add Income Category</h2>
+<h2 mat-dialog-title class="mb-2">{{updateFormData != undefined ? "Update Income Category" : "Add Income Category"}}
+</h2>
 <form [formGroup]="addCategoryForm" (ngSubmit)="addOrUpdateCategory()">
     <mat-dialog-content class="mat-typography mb-2 flex flex-col gap-4">
         <div class="flex flex-col gap-2">
             <label for="category-name" class="text-[1rem] font-medium">Category Name <span
                     class="text-red-600">*</span></label>
 
-            <input type="text" placeholder="Enter Category Name" id="category-name" formControlName="categoryName"
-                class="border border-myAccent caret-myAccent px-4 py-2 rounded" />
+            <input onkeypress="return String.fromCharCode(event.charCode).match(/[^a-zA-Z0-9\., ]/g) === null"
+                maxlength="75" type="text" placeholder="Enter Category Name" id="category-name"
+                formControlName="categoryName" class="border border-myAccent caret-myAccent px-4 py-2 rounded" />
 
             <div *ngIf="
                         f.categoryName.invalid &&
